--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     max-width: 780px;
 }
     body{
-        font-size: 11px;
+        font-size: 12px;
     }
 
     .h1, h1 {
@@ -20,6 +20,11 @@
     
     .titulo {
     padding: 1px 0px 1px 0px;
+    }
+
+    .titulo-categoria{
+        font-weight: bold;
+        color: #343a40eb;
     }
 
     .black{
